--- a/app/src/main/res/layout/activity_send_to_server.xml
+++ b/app/src/main/res/layout/activity_send_to_server.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.SendToServerActivity">
+
+    <com.pnikosis.materialishprogress.ProgressWheel
+        android:id="@+id/progress_wheel"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="125dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="126dp"
+        wheel:layout_constraintEnd_toEndOf="parent"
+        wheel:layout_constraintHorizontal_bias="0.0"
+        wheel:layout_constraintStart_toStartOf="parent"
+        wheel:layout_constraintTop_toTopOf="parent"
+        wheel:matProg_barColor="#5588FF"
+        wheel:matProg_fillRadius="true"
+        wheel:matProg_progressIndeterminate="true" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
