--- a/app/src/main/res/layout/activity_send_to_server.xml
+++ b/app/src/main/res/layout/activity_send_to_server.xml
@@ -8,21 +8,56 @@
 
     <com.pnikosis.materialishprogress.ProgressWheel
         android:id="@+id/progress_wheel"
-        android:layout_width="160dp"
-        android:layout_height="160dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginStart="125dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="126dp"
         wheel:layout_constraintEnd_toEndOf="parent"
-        wheel:layout_constraintHorizontal_bias="0.0"
         wheel:layout_constraintStart_toStartOf="parent"
         wheel:layout_constraintTop_toTopOf="parent"
         wheel:matProg_barColor="#5588FF"
         wheel:matProg_fillRadius="true"
         wheel:matProg_progressIndeterminate="true" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:text="@string/play"
+        android:visibility="invisible"
+        wheel:layout_constraintBottom_toBottomOf="parent"
+        wheel:layout_constraintEnd_toStartOf="@+id/button4"
+        wheel:layout_constraintStart_toEndOf="@+id/button5" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        android:onClick="back_to_menu"
+        android:text="@string/home"
+        android:visibility="invisible"
+        wheel:layout_constraintBottom_toBottomOf="parent"
+        wheel:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="32dp"
+        android:onClick="getxml"
+        android:text="@string/dxml"
+        android:visibility="invisible"
+        wheel:layout_constraintBottom_toBottomOf="parent"
+        wheel:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
