--- a/app/src/main/res/layout/activity_send_to_server.xml
+++ b/app/src/main/res/layout/activity_send_to_server.xml
@@ -6,21 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activity.SendToServerActivity">
 
-    <com.pnikosis.materialishprogress.ProgressWheel
-        android:id="@+id/progress_wheel"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="126dp"
-        wheel:layout_constraintEnd_toEndOf="parent"
-        wheel:layout_constraintStart_toStartOf="parent"
-        wheel:layout_constraintTop_toTopOf="parent"
-        wheel:matProg_barColor="#5588FF"
-        wheel:matProg_fillRadius="true"
-        wheel:matProg_progressIndeterminate="true" />
+    <pl.droidsonroids.gif.GifImageView
+        android:id="@+id/gif"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@mipmap/music"/>
 
     <Button
         android:id="@+id/button3"
