--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,9 +53,15 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="Playlist"
+        android:onClick="go_to_playlist"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="231dp"
+        android:src="@drawable/cat" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
