--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -86,8 +86,6 @@
     </style>
 
 
-
-
     <style name="keytextendkey">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">match_parent</item>
@@ -100,7 +98,6 @@
         <item name="android:layout_marginTop">265dp</item>
         <item name="android:layout_alignBottom">@id/w7</item>
     </style>
-
 
 
     <style name="firstwhitekey">
@@ -135,5 +132,14 @@
         <item name="android:layout_height">50dp</item>
 
     </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
