--- a/app/src/main/res/layout/activity_play_piano.xml
+++ b/app/src/main/res/layout/activity_play_piano.xml
@@ -546,4 +546,10 @@
         </RelativeLayout>
     </HorizontalScrollView>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PLAY"
+        android:onClick="auto_play_piano"/>
+
 </RelativeLayout>
