--- a/app/src/main/res/layout/activity_play_piano.xml
+++ b/app/src/main/res/layout/activity_play_piano.xml
@@ -7,6 +7,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#000000"
     android:gravity="top|center"
+    android:id="@+id/activity_play_piano"
     tools:context=".activity.PlayPianoActivity">
 
     <HorizontalScrollView
@@ -549,7 +550,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PLAY"
-        android:onClick="auto_play_piano"/>
+        android:id="@+id/play_button"
+        android:text="PLAY"/>
 
 </RelativeLayout>
