--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -142,4 +142,9 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.White">
+        <item name="colorControlHighlight">#88ffffff</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+    </style>
+
 </resources>
