--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="gray">#CCC</color>
     <color name="black_overlay">#66000000</color>
+    <color name="color1">#ffffff</color>
+    <color name="color2">#FFFF00</color>
 </resources>
